# kv-cache-safety

./: .gitignore  PLAN.md  README.md  RESEARCH.md  SELECTIVITY_RUNBOOK.md  STATE.md  pyproject.toml
data/: README.md
docs/: experiment_log.md  kv-cache-safety.pdf.manifest.json  msm_reproduction_plan.md  references.bib  selectivity_findings_brief.md  visuals.md
paper/: experiment_log.md  manuscript.md  outline.md  references.bib  related_work.md  visuals.md
results/: README.md
scripts/: _path.py  aggregate_human_audit.py  aggregate_publication_human_audits.sh  aggregate_results.py  approve_judge_egress.py  assess_claims.py  bootstrap_h200.sh  build_evidence_gated_paper_artifacts.sh  build_paper_pdf.sh  build_publication_artifacts.sh  calibrate_claude_vs_gemini.py  check_final_pdf_text.py  check_h200_fetch_manifest.py  check_human_audit_readiness.py  check_latex_citations.py  check_latex_placeholders.py  check_paper_asset_freshness.py  check_prepared_suites.py  check_prompt_disjointness.py  check_publication_readiness.py  cleanup_local_model_caches.sh  compare_artifact_manifests.py  export_human_audit_sample.py  export_paper_assets.py  export_publication_audit_samples.sh  fetch_h200_reports.sh  fetch_h200_results.sh  fetch_h200_selectivity_panel.sh  fetch_h200_selectivity_results.sh  finalize_h200_after_causal.sh  fold_sonnet_into_generations.py  generate_selectivity_configs.py  h200_commit_run_artifacts.sh  h200_progress.sh  integrate_gap_results.sh  judge_with_codex_gemini.py  judge_with_gemini.py  launch_gap_experiments.sh  make_architecture_summary_figure.py  make_budget_dose_response.py  (+41 more)
tests/: test_artifacts.py  test_cache_patching.py  test_cache_policies.py  test_ci_power.py  test_claim_assessment.py  test_config.py  test_figures.py  test_h200_admin_report.py  test_h200_result_sync.py  test_h200_status.py  test_h200_support_bundle.py  test_human_audit.py  test_human_audit_aggregation.py  test_human_audit_readiness.py  test_judge_attempt_summary.py  test_latex_manuscript.py  test_local_judge.py  test_mac_fallback.py  test_merge_ci_extension_results.py  test_metrics.py  test_model_loader.py  test_open_judge_audit.py  test_post_h200_next_steps.py  test_prepare_data.py  test_prepared_suites.py  test_project_metadata.py  test_prompt_disjointness.py  (+9 more)
(+549 files in other folders)
