[project]
name = "cache-safety-erasure"
version = "0.1.0"
description = "Research harness for testing whether KV-cache optimizations selectively weaken safety behavior in open LLMs."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "accelerate>=0.34.0",
  "datasets>=2.20.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "pypdf>=4.3.0",
  "pyyaml>=6.0.0",
  "safetensors>=0.4.4",
  "torch>=2.4.0,<2.7.0",
  "tqdm>=4.66.0",
  "transformers>=4.44.0,<5.0.0",
]

[project.urls]
Homepage = "https://github.com/aryan-cs/kv-cache-safety"
Repository = "https://github.com/aryan-cs/kv-cache-safety"
Issues = "https://github.com/aryan-cs/kv-cache-safety/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=69.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"scripts/*.py" = ["E402"]
